# home-server

./: Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs  otp.rs
src/func/: db_models.rs
