[package]
name = "home-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0-rc.1"
chrono = "0.4"
sha2 = "0.9.5"
boringauth = "*"
mysql = "21.0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }